--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,8 @@
 :root {
-  --primary-color: #0056b3;
+  --primary-color: #253CC5;
   --secondary-color: #ff6600;
-  --text-color: #333;
-  --text-light-color: #666;
+  --primary-text-color: #000;
   --background-color: #fff;
-  --header-border-color: #e0e0e0;
-  --box-shadow-color: rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -13,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--background-color);
-  color: var(--text-color);
+  color: var(--primary-text-color);
 }
 
 .container {
@@ -37,25 +34,27 @@ header .logo {
 header nav a {
   margin-left: 20px;
   text-decoration: none;
-  color: var(--text-color);
+  color: var(--primary-text-color);
+  font-weight: 500;
 }
 
 .hero {
   padding: 50px 0px;
   text-align: left;
-  max-width: 500px;
+  max-width: 600px;
   margin: 0;
 }
 
 .hero h1 {
-  font-size: 2.5em;
+  font-size: 3em;
   margin-bottom: 10px;
+  font-weight: 500;
 }
 
 .hero h2 {
-  font-size: 1.2em;
+  font-size: 2em;
   font-weight: 300;
-  color: var(--text-light-color);
+  color: var(--primary-text-color);
 }
 
 .content {
@@ -63,15 +62,15 @@ header nav a {
 }
 
 .content h3 {
-  font-size: 1.5em;
+  font-size: 1.6em;
   margin-top: 30px;
   font-weight: 500;
 }
 
 .content p {
-  font-size: 1.1em;
+  font-size: 1.5em;
   line-height: 1.6;
-  color: var(--text-light-color);
+  color: var(--primary-text-color);
   font-weight: 300;
 }
 
@@ -87,9 +86,7 @@ header nav a {
   flex: 1;
   min-width: 280px;
   padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px var(--box-shadow-color);
-  text-align: center;
+  border-radius: 20px;
 }
 
 .card.blue {
@@ -119,5 +116,8 @@ header nav a {
 
 footer {
   padding: 20px 0;
-  text-align: center;
+}
+
+hr {
+  border-style: solid;
 }
