--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,8 @@ header {
   padding: 20px 0;
 }
 
-header .logo {
-  font-size: 1.5em;
-  font-weight: 500;
+header .logo img {
+  height: 25px;
 }
 
 header nav a {
@@ -83,9 +82,12 @@ header nav a {
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* This ensures that the content and link are spaced apart */
   flex: 1;
   min-width: 280px;
-  padding: 20px;
+  padding: 30px;
   border-radius: 20px;
 }
 
@@ -100,24 +102,30 @@ header nav a {
 }
 
 .card h4 {
-  margin-top: 0;
+  margin: 0;
+}
+
+.card h4 img {
+  height: 24px;
+  margin-right: 10px;
+  vertical-align: middle;
 }
 
 .card a {
-  display: inline-block;
-  margin-top: 20px;
+  align-self: flex-end; /* Aligns the link to the end of the card (right side) */
   padding: 10px 20px;
-  border-radius: 4px;
-  background-color: var(--background-color);
-  color: var(--primary-color);
+  border-radius: 8px;
+  color: var(--background-color);
   text-decoration: none;
   font-weight: 500;
+  border: 1px solid white;
 }
 
 footer {
+  text-align: center;
   padding: 20px 0;
 }
 
 hr {
-  border-style: solid;
+  border: 1px solid black;
 }
